5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/1407/executions/1575_994.log
== TEST (2019-03-13 13:06:57) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:15:00) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:32:35) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:39:17) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:40:08) 
-- CODE:
print( Bruce Wayne"
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:40:16) 
-- CODE:
print("oi")
-- OUTPUT:
oi
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:40:18) 
-- CODE:
print("oi"
-- ERROR:
File "XXXX", line 2
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:40:41) 
-- CODE:
print("oi"
-- EXECUTION TIME:
0.173013
-- ERROR:
  File "/home/codebench/codes/1575/994/main.py", line 2
    
              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:40:43) 
-- CODE:
print("oi"
-- ERROR:
File "XXXX", line 2
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:41:30) 
-- CODE:
print("oi"
-- ERROR:
File "XXXX", line 2
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:42:02) 
-- CODE:
x = int(input("Digite o preco: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: 'xx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:42:20) 
-- CODE:
x = input()
if (x == "1"):
    print("resultado = 1")
if (x == "2"):
print("resultado = 2")
-- ERROR:
File "XXXX", line 5
    print("resultado = 2")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:42:46) 
-- CODE:
print("oi"

-- ERROR:
File "XXXX", line 2
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:43:59) 
-- CODE:
a = 1
if (a == 1):
    print("1")
 if (a == 2):
    print("2")
-- ERROR:
File "XXXX", line 4
    if (a == 2):
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:44:08) 
-- CODE:
 a = 1

-- ERROR:
File "XXXX", line 1
    a = 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:44:18) 
-- CODE:
from numpy import *

# vetor de 4 elementos:
vet = array([0,1,2,3])

# quinto elemento:
print(vet[4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:44:32) 
-- CODE:
if (reta == 3):
	mensagem = "ponto nao pertence a reta"
 	print(mensagem)
-- ERROR:
File "XXXX", line 3
    print(mensagem)
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:44:43) 
-- CODE:
round(2**(0,5), 8)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(2**(0,5), 8)
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:45:02) 
-- CODE:
print(1/0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(1/0)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:45:11) 
-- CODE:
b = "1"
soma = b + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    soma = b + 2
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:45:17) 
-- CODE:
a = 1
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:45:28) 
-- CODE:
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
